[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/DuelScene.gd" type="Script" id=1]

[node name="DuelScene" type="Node2D"]
script = ExtResource( 1 )

[node name="OpponentField" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 153.0
margin_top = 11.0
margin_right = 812.0
margin_bottom = 143.0

[node name="VBoxContainer2" type="VBoxContainer" parent="OpponentField"]
margin_right = 659.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OpponentMonsterZones" type="HBoxContainer" parent="OpponentField/VBoxContainer2"]
margin_right = 659.0
size_flags_horizontal = 3

[node name="OpponentSpellTrapZones" type="HBoxContainer" parent="OpponentField/VBoxContainer2"]
margin_top = 4.0
margin_right = 659.0
margin_bottom = 4.0

[node name="OpponentInfo" type="HBoxContainer" parent="OpponentField"]
margin_right = 659.0
margin_bottom = 132.0

[node name="OpponentLPLabel" type="Label" parent="OpponentField/OpponentInfo"]
margin_top = 59.0
margin_right = 55.0
margin_bottom = 73.0
text = "LP: 8000"

[node name="Label2" type="Label" parent="OpponentField/OpponentInfo"]
margin_left = 59.0
margin_top = 59.0
margin_right = 114.0
margin_bottom = 73.0
text = "\"Hand: 5"

[node name="CenterPanel" type="VBoxContainer" parent="."]
margin_left = 19.0
margin_top = 116.0
margin_right = 113.0
margin_bottom = 166.0

[node name="PhaseLabel" type="Label" parent="CenterPanel"]
margin_right = 94.0
margin_bottom = 14.0
text = "PhaseLabel"

[node name="TurnLabel" type="Label" parent="CenterPanel"]
margin_top = 18.0
margin_right = 94.0
margin_bottom = 32.0
text = "TurnLabel"

[node name="EndTurnButton" type="Label" parent="CenterPanel"]
margin_top = 36.0
margin_right = 94.0
margin_bottom = 50.0
text = "EndTurnButton"

[node name="PlayerField" type="MarginContainer" parent="."]
margin_left = 157.0
margin_top = 455.0
margin_right = 863.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerField"]
margin_right = 706.0
margin_bottom = 145.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerHand" type="HBoxContainer" parent="PlayerField/VBoxContainer"]
margin_right = 706.0
size_flags_horizontal = 3

[node name="PlayerMonsterZones" type="HBoxContainer" parent="PlayerField/VBoxContainer"]
margin_top = 4.0
margin_right = 706.0
margin_bottom = 4.0
size_flags_horizontal = 3

[node name="PlayerSpellTrapZones" type="HBoxContainer" parent="PlayerField/VBoxContainer"]
margin_top = 8.0
margin_right = 706.0
margin_bottom = 8.0

[node name="PlayerInfo" type="HBoxContainer" parent="PlayerField"]
margin_right = 706.0
margin_bottom = 145.0

[node name="PlayerLPLabel" type="Label" parent="PlayerField/PlayerInfo"]
margin_top = 65.0
margin_right = 32.0
margin_bottom = 79.0
text = "8000"

[node name="ActionLogPanel" type="PanelContainer" parent="."]
margin_left = 622.0
margin_top = 226.0
margin_right = 988.0
margin_bottom = 300.0

[node name="ActionLog" type="RichTextLabel" parent="ActionLogPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 359.0
margin_bottom = 67.0

[node name="DebugLogPanel" type="PanelContainer" parent="."]
margin_left = 188.0
margin_top = 233.0
margin_right = 537.0
margin_bottom = 299.0

[node name="DebugLog" type="RichTextLabel" parent="DebugLogPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 342.0
margin_bottom = 59.0

[node name="Clock" type="Timer" parent="."]
